# Integrated-Risk-App

./: .gitignore  LICENSE  MIGRATION_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: app.py
data/: credit_example.csv  market_data.csv
docs/: model_report.md  model_risk_report.md
integrated_risk_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/notebooks/: test_var_with_yf.ipynb
notebooks/notebooks/data/: market_data.csv
notebooks/notebooks/notebooks/: exceptions_99pct_window250.csv
risk_engine/: credit.py  data.py  market.py  scenarios.py  stress.py
risklib/market/: backtest.py  market_risk_model.py
tests/: conftest.py  test_credit.py  test_market_risk_properties.py  test_var.py
