[project]
name = "integrated-risk-py"
version = "0.1.0"
description = "Integrated risk model in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas", "numpy", "scipy", "plotly", "streamlit"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["risk_engine*"]
