[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrated-risk-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "pandas",
  "numpy",
  "plotly",
  "yfinance",
  "scipy",
  "statsmodels",
  "matplotlib",
  "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["risk_engine*"]
